src/styles/_index.scss
$container-width: calc(100vh / 2.3);

html {
  font-family: var(--font), sans-serif;
  font-size: calc(100vw / 31);

  &[data-font="poppins"] {
    --font: "Poppins";
  }

  &[data-font="museo"] {
    --font: "Museo";
  }

  &[data-font="merriweather"] {
    --font: "Merriweather";
  }

  &[data-color="red"] {
    --color: #f87070;
  }

  &[data-color="blue"] {
    --color: #70f1f2;
  }

  &[data-color="purple"] {
    --color: #d681f6;
  }
}

body {
  background: #1d2041;
  height: 100vh;
}

.container {
  align-items: center;
  display: flex;
  height: 100%;
  justify-content: center;
  margin: auto;
  width: 87.5vw;
}

.content {
  display: grid;
  gap: 4.5rem;
}

.logo {
  display: grid;
  place-content: center;

  &__text {
    color: #d7defb;
    font-size: 1.8rem;
    font-weight: 700;
  }
}

.menu {
  background: #151932;
  border-radius: 5rem;
  display: grid;
  height: 5.25rem;
  margin: auto;
  padding: 0.6rem 0.5rem;
  width: 100%;
  z-index: 1;

  &__options {
    display: grid;
    grid-auto-flow: column;
    height: 100%;
    width: 100%;
  }

  &__button {
    border-radius: 5rem;
    color: #646883;
    display: grid;
    place-content: center;

    &--switch {
      background: #1f223e;
      color: #646883;
      display: none;
      place-content: center;
    }

    &.active {
      background: var(--color);
      color: #151932;
    }
  }

  &__text {
    font-size: 0.9rem;
    font-weight: 700;
  }
}

.timer {
  align-items: center;
  background: linear-gradient(130deg, #121632, #292d51);
  border-radius: 50%;
  box-shadow: -50px -50px 100px 10px #252b57, 50px 50px 100px 10px #141833;
  display: flex;
  max-height: $container-width;
  max-width: $container-width;
  height: 80vw;
  justify-content: center;
  width: 80vw;

  &__circle {
    align-items: center;
    background: #151932;
    border-radius: 50%;
    display: flex;
    height: 90%;
    justify-content: center;
    position: relative;
    width: 90%;
  }

  &__progress {
    height: 92%;
    overflow: visible;
    position: absolute;
    width: 92%;
  }

  &__path {
    fill: none;
    stroke: var(--color);
    stroke-linecap: round;
    stroke-width: 17.5px;
  }

  &__background {
    border-radius: 50%;
    color: #d7e0ff;
    display: grid;
    height: 86%;
    place-content: center;
    width: 86%;
    z-index: 1;
  }

  &__time {
    font-size: min(5.5rem, 100vh / 12);
    margin-top: 2rem;
  }

  &__status {
    font-size: min(1.5rem, 100vh / 50);
    font-weight: 400;
    letter-spacing: 1rem;
    margin: -0.25rem auto 0;
    padding-left: 1rem;
    text-transform: uppercase;
  }
}

.switch {
  display: grid;
  place-content: center;
  z-index: 1;

  &__button::before {
    color: #7b809e;
    content: "\f013";
    font-family: "Font Awesome 5 Free";
    font-size: 2.5rem;
    font-weight: 900;
  }
}

.modal {
  background: rgba(0, 0, 0, 0.5);
  display: grid;
  height: 100%;
  place-content: center;
  position: absolute;
  width: 100%;
  z-index: 2;

  &__container {
    max-width: 65vh;
    width: 87.5vw;

    &--small {
      max-width: 55vh;
      width: 87.5vw;
    }
  }

  &__background {
    &--light {
      height: calc(100% - 2rem);
      background: white;
      border-radius: 1rem;
    }

    &--dark {
      height: calc(100% - 2rem);
      background: #151932;
      border-radius: 1rem;
    }
  }

  &__header {
    padding: 2rem;
    text-align: center;
  }

  &__title {
    &--light {
      color: white;
      font-size: 1.5rem;
      font-weight: 700;
    }

    &--dark {
      color: #151a30;
      font-size: 1.5rem;
      font-weight: 700;
    }
  }

  &__separator {
    background: #e8e8e8;
    border-color: #e8e8e8;
    border-radius: 1rem;
    border-width: 0.5px;
    margin: auto;
    width: calc(100% - 4rem);

    &--large {
      background: #e8e8e8;
      border-color: #e8e8e8;
      border-radius: 1rem;
      border-width: 0.5px;
    }
  }

  &__main {
    display: grid;
    gap: 1rem;
    padding: 2rem;

    &--center {
      display: grid;
      gap: 1rem;
      padding: 2rem;
      text-align: center;
    }
  }

  &__subtitle {
    &--light {
      color: white;
      font-weight: 400;
      letter-spacing: 0.1rem;
      text-align: center;
    }

    &--dark {
      color: #151a30;
      font-weight: bold;
      letter-spacing: 0.3rem;
      text-align: center;
    }
  }

  &__timers {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    row-gap: 0.5rem;

    label {
      align-self: center;
      color: #adadb4;
      font-weight: 700;
      font-size: 1.1rem;
      text-align: left;
    }

    input {
      background: #eef1fa;
      border-radius: 1rem;
      color: #151a30;
      font-size: 1.05rem;
      font-weight: 700;
      padding: 0.9rem 1.25rem;

      &:read-only {
        color: #adadb4;
        cursor: not-allowed;
      }
    }
  }

  &__options {
    justify-content: center;
  }

  &__menu {
    display: grid;
    gap: 1rem;
    padding: 2rem;
  }

  &__fonts {
    display: grid;
    gap: 1.25rem;
    grid-auto-flow: column;
    margin: auto;

    .active {
      background: #151a30;
      color: #fafcff;
    }
  }

  &__colors {
    display: grid;
    gap: 1.25rem;
    grid-auto-flow: column;
    margin: auto;

    .active {
      display: flex;

      &::before {
        color: #151a30;
        content: "\f00c";
        font-family: "Font Awesome 5 Free";
        font-size: 1.25rem;
        font-weight: 900;
        margin: auto;
      }
    }
  }

  &__button {
    &--poppins {
      background: #eef1fa;
      border-radius: 50%;
      color: #151a30;
      font-family: "Poppins";
      font-size: 1.4rem;
      font-weight: 700;
      height: 3.5rem;
      width: 3.5rem;
    }

    &--museo {
      background: #eef1fa;
      border-radius: 50%;
      color: #151a30;
      font-family: "Museo";
      font-size: 1.4rem;
      font-weight: 700;
      height: 3.5rem;
      width: 3.5rem;
    }

    &--merriweather {
      background: #eef1fa;
      border-radius: 50%;
      color: #151a30;
      font-family: "Merriweather";
      font-size: 1.4rem;
      font-weight: 700;
      height: 3.5rem;
      width: 3.5rem;
    }

    &--red {
      background: #f87070;
      border-radius: 50%;
      height: 3.5rem;
      width: 3.5rem;
    }

    &--blue {
      background: #70f1f2;
      border-radius: 50%;
      height: 3.5rem;
      width: 3.5rem;
    }

    &--purple {
      background: #d681f6;
      border-radius: 50%;
      height: 3.5rem;
      width: 3.5rem;
    }
  }

  &__footer {
    display: flex;
    justify-content: space-evenly;
    text-align: center;
  }

  &__control {
    &--cancel {
      background: #1f223e;
      border-radius: 3rem;
      color: white;
      font-family: var(--font);
      font-weight: 700;
      font-size: 1.1rem;
      height: 4.25rem;
      padding: 0 4rem;
    }

    &--apply {
      background: var(--color);
      border-radius: 3rem;
      color: white;
      font-family: var(--font);
      font-weight: 700;
      font-size: 1.1rem;
      height: 4.25rem;
      padding: 0 4rem;
    }
  }
}

@media (hover: hover) {
  .pointer {
    cursor: pointer;
  }
}

@media (min-width: 500px) {
  html {
    font-size: 14px;
  }

  .modal {
    &__background--light,
    &__background--dark {
      border-radius: 2rem;
    }

    &__header {
      padding: 2rem 3rem;
    }

    &__title--light,
    &__title--dark {
      font-size: 2rem;
    }

    &__separator {
      width: calc(100% - 6rem);
    }

    &__main {
      padding: 2rem 3rem;
      gap: 1.5rem;
    }

    &__subtitle--light,
    &__subtitle--dark {
      align-self: center;
      font-size: 1.1rem;
      text-align: unset;
    }

    &__timers {
      gap: 0 1.5rem;
      grid-auto-flow: column;
      grid-template-columns: repeat(3, 1fr);
      grid-template-rows: 1fr auto;

      label {
        font-size: 0.9rem;
        margin: 0 0 0.5rem 0.25rem;
      }

      input {
        padding: 1.1rem 1.25rem;
      }
    }

    &__menu {
      grid-auto-flow: column;
      padding: 2rem 3rem;
    }

    &__fonts,
    &__colors {
      margin-right: 0;
    }
  }
}

@media (min-width: 992px) {
  html {
    font-size: 16px;
  }

  .logo__text {
    font-size: 2rem;
  }
}

@media (orientation: landscape) and (max-height: 900px) {
  html {
    font-size: 14px;
  }

  .container {
    max-width: none;
  }

  .content {
    grid-auto-flow: column;
  }

  .logo {
    display: none;
  }

  .menu {
    border-radius: 3rem;
    grid-auto-flow: row;
    grid-template-rows: 3fr 1fr;
    height: 25rem;
    width: 15rem;

    &__options {
      grid-auto-flow: row;
    }

    &__button {
      border-radius: 3rem;

      &--switch {
        border-radius: 3rem;
        display: grid;
      }
    }

    &__text {
      font-size: 1.15rem;
    }
  }

  .timer {
    max-height: min(50vw, 35rem);
    max-width: min(50vw, 35rem);
    height: 85vh;
    width: 85vh;

    &__time {
      font-size: min(5.75rem, 100vw / 13);
    }

    &__status {
      font-size: min(1.5rem, 100vw / 50);
    }
  }

  .switch {
    display: none;
  }

  .modal {
    &__container {
      max-width: 50rem;

      &--small {
        max-width: 35rem;
      }
    }

    &__header,
    &__separator--large:first-of-type {
      display: none;
    }

    &__main {
      gap: 0.75rem;

      span {
        margin-left: 0.25rem;
      }
    }

    &__timers {
      label {
        font-size: 1.1rem;
      }

      input {
        font-size: 1.5rem;
      }
    }

    &__options {
      display: flex;

      hr {
        margin: 0;
        width: auto;
      }
    }
  }
}

@media (orientation: landscape) and (max-height: 450px) {
  html {
    font-size: calc(100vh / 31);
  }

  .modal__menu {
    padding: 2rem;
  }
}

